# progress-timer

./: .gitignore  README.md  main.py  project.py  pyproject.toml  session.py  user.py  utils.py
.github/workflows/: lint.yml
projects/: example_project.json
sessions/: example_project.json
settings/: user.json
